--- a/HitScoreVisualizer/HitScoreVisualizer.csproj
+++ b/HitScoreVisualizer/HitScoreVisualizer.csproj
@@ -41,6 +41,10 @@
 			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\GameplayCore.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
+		<Reference Include="BGLib.UnityExtension">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\BGLib.UnityExtension.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
 		<Reference Include="HMLib">
 			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\HMLib.dll</HintPath>
 			<Private>False</Private>
