--- a/HitScoreVisualizer/HitScoreVisualizer.csproj
+++ b/HitScoreVisualizer/HitScoreVisualizer.csproj
@@ -1,92 +1,132 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
-    <OutputType>Library</OutputType>
-    <LangVersion>12</LangVersion>
-    <Nullable>enable</Nullable>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <LocalRefsDir Condition="Exists('..\Refs')">..\Refs</LocalRefsDir>
-    <BeatSaberDir>$(LocalRefsDir)</BeatSaberDir>
-    <AppOutputBase>$(MSBuildProjectDirectory)\</AppOutputBase>
-    <DebugType>portable</DebugType>
-  </PropertyGroup>
-  <ItemGroup>
-	  <Reference Include="0Harmony">
-		<HintPath>$(BeatSaberDir)\Libs\0Harmony.dll</HintPath>
-	  </Reference>
-	  <Reference Include="BeatmapCore">
-		<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\BeatmapCore.dll</HintPath>
-	  </Reference>
-	  <Reference Include="BeatSaber.ViewSystem">
-		  <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\BeatSaber.ViewSystem.dll</HintPath>
-		  <Private>false</Private>
-	  </Reference>
-	  <Reference Include="BGLib.UnityExtension">
-		<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\BGLib.UnityExtension.dll</HintPath>
-	  </Reference>
-	  <Reference Include="BSML">
-		<HintPath>$(BeatSaberDir)\Plugins\BSML.dll</HintPath>
-	  </Reference>
-	  <Reference Include="DataModels">
-		<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\DataModels.dll</HintPath>
-	  </Reference>
-	  <Reference Include="GameplayCore">
-		<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\GameplayCore.dll</HintPath>
-	  </Reference>
-	  <Reference Include="Hive.Versioning">
-		<HintPath>$(BeatSaberDir)\Libs\Hive.Versioning.dll</HintPath>
-	  </Reference>
-	  <Reference Include="HMLib">
-		<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\HMLib.dll</HintPath>
-	  </Reference>
-	  <Reference Include="HMUI">
-		<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\HMUI.dll</HintPath>
-	  </Reference>
-	  <Reference Include="IPA.Loader">
-		<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\IPA.Loader.dll</HintPath>
-	  </Reference>
-	  <Reference Include="Main" Publicize="true">
-		<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Main.dll</HintPath>
-	  </Reference>
-	  <Reference Include="Newtonsoft.Json">
-		<HintPath>$(BeatSaberDir)\Libs\Newtonsoft.Json.dll</HintPath>
-	  </Reference>
-	  <Reference Include="SiraUtil">
-		<HintPath>$(BeatSaberDir)\Plugins\SiraUtil.dll</HintPath>
-	  </Reference>
-	  <Reference Include="Unity.TextMeshPro" Publicize="True">
-		<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Unity.TextMeshPro.dll</HintPath>
-	  </Reference>
-	  <Reference Include="UnityEngine">
-		<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.dll</HintPath>
-	  </Reference>
-	  <Reference Include="UnityEngine.CoreModule">
-		<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
-	  </Reference>
-	  <Reference Include="UnityEngine.TextRenderingModule">
-		<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
-	  </Reference>
-	  <Reference Include="Zenject" Publicize="true">
-		<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Zenject.dll</HintPath>
-	  </Reference>
-	  <Reference Include="Zenject-usage">
-		<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Zenject-usage.dll</HintPath>
-	  </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Directory.Build.props" Condition="Exists('Directory.Build.props')" />
-    <None Include="Directory.Build.targets" Condition="Exists('Directory.Build.targets')" />
-    <None Include="HitScoreVisualizer.csproj.user" Condition="Exists('HitScoreVisualizer.csproj.user')" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="manifest.json" />
-    <EmbeddedResource Include="UI\Views\*.bsml" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="BeatSaberModdingTools.Tasks" Version="2.0.0-beta4">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.2" PrivateAssets="all" />
-  </ItemGroup>
+
+	<Import Project="HitScoreVisualizer.csproj.user" Condition="Exists('HitScoreVisualizer.csproj.user')" />
+
+	<PropertyGroup>
+		<TargetFramework>net472</TargetFramework>
+		<LangVersion>latest</LangVersion>
+		<Nullable>enable</Nullable>
+		<TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+		<EnableFrameworkPathOverride>true</EnableFrameworkPathOverride>
+		<FrameworkPathOverride>$(BeatSaberDir)\Beat Saber_Data\Managed</FrameworkPathOverride>
+		<MarkPackageReferencesAsExternallyResolved>false</MarkPackageReferencesAsExternallyResolved>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="BeatSaberModdingTools.Tasks" Version="2.0.0-beta7">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.2">
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+		<EmbeddedResource Include="UI\Views\*.bsml" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="Directory.Build.props" Condition="Exists('Directory.Build.props')" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Reference Include="0Harmony">
+			<HintPath>$(BeatSaberDir)\Libs\0Harmony.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="BeatmapCore">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\BeatmapCore.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="BeatSaber.ViewSystem">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\BeatSaber.ViewSystem.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="BGLib.UnityExtension">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\BGLib.UnityExtension.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="BSML">
+			<HintPath>$(BeatSaberDir)\Plugins\BSML.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="DataModels">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\DataModels.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="GameplayCore">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\GameplayCore.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="Hive.Versioning">
+			<HintPath>$(BeatSaberDir)\Libs\Hive.Versioning.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="HMLib">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\HMLib.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="HMUI">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\HMUI.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="IPA.Loader">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\IPA.Loader.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="Main" Publicize="true">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Main.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="mscorlib">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\mscorlib.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="netstandard">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\netstandard.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="Newtonsoft.Json">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Newtonsoft.Json.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="SiraUtil">
+			<HintPath>$(BeatSaberDir)\Plugins\SiraUtil.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="System">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\System.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="System.Core">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\System.Core.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="Unity.TextMeshPro" Publicize="True">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Unity.TextMeshPro.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="UnityEngine">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="UnityEngine.CoreModule">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="UnityEngine.TextRenderingModule">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="Zenject" Publicize="true">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Zenject.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="Zenject-usage">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Zenject-usage.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+	</ItemGroup>
+
 </Project>
