Refactor config file info
Make sure not to use relative paths or paths, instead use FileInfo. Only use relative paths in the config.

--- a/HitScoreVisualizer/HitScoreVisualizer.csproj
+++ b/HitScoreVisualizer/HitScoreVisualizer.csproj
@@ -6,7 +6,7 @@
 		<TargetFramework>net472</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<Nullable>enable</Nullable>
-		<TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 		<EnableFrameworkPathOverride>true</EnableFrameworkPathOverride>
 		<FrameworkPathOverride>$(BeatSaberDir)\Beat Saber_Data\Managed</FrameworkPathOverride>
 		<MarkPackageReferencesAsExternallyResolved>false</MarkPackageReferencesAsExternallyResolved>
